hra/patternlab/site/sass/molecules/streamfield/_call-to-action.scss
/*------------------------------------*\
    $CALL TO ACTION
\*------------------------------------*/

.call-to-action {
    position: relative;
    display: block;
    max-width: 400px;
    padding: 45px 30px;
    background: linear-gradient(to right, #0f5faf, #235789);

    &::before {
        position: absolute;
        top: 40px;
        right: 40px;
        width: 40px;
        height: 46px;
        background: {
            size: cover;
            image: url('../images/svg/plain-arrow.svg');
        }
        content: '';
        transform: rotate(-90deg);
    }

    &__heading {
        &,
        .article & {
            padding: 0 70px 0 0;
            margin-bottom: 10px;
            line-height: 1.2;
            color: #fff;
        }
    }

    &__description {
        &,
        .article & {
            @include font-size(milli);
            margin: 0;
            color: #fff;
        }
    }
}

.cta-structure {
    position: relative;
    min-height: 150px;
    margin: 30px 0;

    @include media-query(desktop) {
        margin: 0;
    }

    &__left,
    &__right {
        display: inline-block;
        vertical-align: top;
    }

    &__left {
        width: 60%;

        @include media-query(desktop) {
            width: 100%;
            margin-bottom: 10px;
        }
    }

    &__right {
        position: absolute;
        top: 20px;
        right: -20%;
        width: 50%;

        @include media-query(desktop) {
            position: static;
        }

        @include media-query(tablet) {
            width: 100%;
        }
    }
}

